--- a/molecule/install_agent/molecule.yml
+++ b/molecule/install_agent/molecule.yml
@@ -6,17 +6,11 @@ driver:
 lint: |
   set -e
   yamllint .
-#  ansible-lint .
+  ansible-lint . -w role-name
 platforms:
   - name: instance
     image: docker.io/${MOLECULE_DISTRO:-centos:8}
-#    command: "/usr/sbin/init"
-#    capabilities:
-#      - SYS_ADMIN
-    pre_build_image: true
 provisioner:
   name: ansible
-  options:
-    skip-tags: molecule-notest
 verifier:
   name: ansible
