--- a/molecule/install_agent/verify.yml
+++ b/molecule/install_agent/verify.yml
@@ -5,10 +5,20 @@
     - name: Ensure the agent is present
       package:
         name: stackdriver-agent
-        state: absent
+        state: present
+      register: result
+
+    - name: Assert the agent was already present
+      assert:
+        that: result.changed == false
 
     - name: Ensure the agent has started
       service:
         name: stackdriver-agent
-        state: stopped
+        state: started
         use: service
+      register: result
+
+    - name: Assert the agent was already running
+      assert:
+        that: result.changed == false
