--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install molecule[docker] docker yamllint ansible-lint
+        run: pip3 install ansible molecule[docker] docker yamllint ansible-lint
 
       - name: Run Molecule tests.
         run: molecule test -s ${{ matrix.scenario }}
