rename role back to the github repo name

--- a/molecule/install_agent/converge.yml
+++ b/molecule/install_agent/converge.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Include cloud_ops role
       include_role:
-        name: 'cloud_ops'
+        name: 'stackdriver-ansible-role'
       vars:
-        agent_type: "monitoring"
+        agent_type: 'monitoring'
         testing: true
