--- a/molecule/uninstall_agent/converge.yml
+++ b/molecule/uninstall_agent/converge.yml
@@ -7,5 +7,5 @@
         name: 'stackdriver-ansible-role'
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-        package_state: present
+        package_state: absent
         testing: True
