--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,18 +37,18 @@ jobs:
               - latest
               - 6.*.*
               - 6.1.0
-          - agent_type: logging
-          - scenario: install_agent
-            version:
-              - latest
-              - 1.*.*
-              - 1.7.0
-          - agent_type: ops-agent
-          - scenario: install_agent
-            version:
-              - latest
-              - 1.*.*
-              - 1.1.0
+        #   - agent_type: logging
+        #  - scenario: install_agent
+        #    version:
+        #      - latest
+        #      - 1.*.*
+        #      - 1.7.0
+        #  - agent_type: ops-agent
+        #  - scenario: install_agent
+        #    version:
+        #      - latest
+        #      - 1.*.*
+        #      - 1.1.0
 
     steps:
       - name: Checkout the codebase.
