--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,11 @@ jobs:
           - geerlingguy/docker-ubuntu2004-ansible
         exclude:
           - agent_type: monitoring
-            version:
-              - 1.*.*
-              - 1.7.0
-              - 1.1.0
+            version: 1.*.*
+          - agent_type: monitoring
+            version: 1.7.0
+          - agent_type: monitoring
+            version: 1.1.0
 
     steps:
       - name: Checkout the codebase.
