--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ name: CI
   pull_request:
   push:
     branches:
-      - main
+      - master
 
 jobs:
 
@@ -15,7 +15,7 @@ jobs:
       matrix:
         agent_type:
           - monitoring
-          - logging
+            #          - logging
           - ops-agent
         scenario:
           - install_agent
@@ -30,6 +30,7 @@ jobs:
         distro:
           - geerlingguy/docker-centos7-ansible
           - geerlingguy/docker-centos8-ansible
+          # RedHat Universal Base Image (rhel8)
           - geerlingguy/docker-ubi8-ansible
           - geerlingguy/docker-amazonlinux2-ansible
           - geerlingguy/docker-debian9-ansible
@@ -37,6 +38,7 @@ jobs:
           - geerlingguy/docker-ubuntu1604-ansible
           - geerlingguy/docker-ubuntu1804-ansible
           - geerlingguy/docker-ubuntu2004-ansible
+
         exclude:
           - scenario: uninstall_agent
             version: 6.*.*
@@ -79,6 +81,9 @@ jobs:
       - name: Install test dependencies.
         run: pip3 install ansible molecule[docker] docker yamllint ansible-lint
 
+      - name: Create custom config file
+        run: echo "# Sample custom config" > ~/custom_config.conf
+
       - name: Run Molecule tests.
         run: molecule test -s ${{ matrix.scenario }}
         env:
@@ -86,4 +91,5 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
           AGENT_TYPE: ${{ matrix.agent_type }}
+          CUSTOM_CONFIG_FILE: '~/custom_config.conf'
           VERSION: ${{ matrix.include.version }}
