Change uninstall to uninstall_agent

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,15 @@ jobs:
           - geerlingguy/docker-ubuntu1804-ansible
           - geerlingguy/docker-ubuntu2004-ansible
         exclude:
-          - scenario: uninstall
+          - scenario: uninstall_agent
             version: 6.*.*
-          - scenario: uninstall
+          - scenario: uninstall_agent
             version: 6.1.0
-          - scenario: uninstall
+          - scenario: uninstall_agent
             version: 1.*.*
-          - scenario: uninstall
+          - scenario: uninstall_agent
             version: 1.7.0
-          - scenario: uninstall
+          - scenario: uninstall_agent
             version: 1.1.0
           - agent_type: monitoring
             version: 1.*.*
