--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,4 +3,4 @@
   service:
     name: stackdriver-agent
     state: restarted
-  when: not ansible_check_mode
+  when: package_state == 'present' and not ansible_check_mode
