--- a/tasks/monitoring.yml
+++ b/tasks/monitoring.yml
@@ -21,19 +21,19 @@
   check_mode: no
   changed_when: false
 
+- name: Add repo and install agent or remove repo and uninstall agent
+  command:
+    chdir: "{{ tempfolder.path }}"
+    cmd: "bash add-monitoring-agent-repo.sh {{ '--also-install' if package_state == 'present' else '--uninstall --remove-repo' }} --version={{ version }} {{ '--dry-run' if ansible_check_mode else '' }}"
+  environment:
+    REPO_CODENAME: "{{ ansible_distribution_release }}"
+  register: result
+  check_mode: no
+  changed_when: "'No changes made.' not in result.stdout_lines"
+  notify: restart monitoring agent
+
 - when: package_state == 'present'
   block:
-  - name: Add repo and install agent
-    command:
-      chdir: "{{ tempfolder.path }}"
-      cmd: "bash add-monitoring-agent-repo.sh --also-install --version={{ version }} {{ '--dry-run' if ansible_check_mode else '' }}"
-    environment:
-      REPO_CODENAME: "{{ ansible_distribution_release }}"
-    register: result
-    check_mode: no
-    changed_when: "'No changes made.' not in result.stdout_lines"
-    notify: restart monitoring agent
-
   - name: Copy main config file onto the remote machine
     copy:
       src: "{{ main_config_file }}"
@@ -55,16 +55,6 @@
       - "{{ additional_config_dir }}/*.conf"
     when: additional_config_dir|length > 0
     notify: restart monitoring agent
-
-- when: package_state == 'absent'
-  block:
-  - name: Uninstall agent and remove repo
-    command:
-      chdir: "{{ tempfolder.path }}"
-      cmd: "bash add-monitoring-agent-repo.sh --uninstall --remove_repo {{ '--dry-run' if ansible_check_mode else '' }}"
-    register: result
-    check_mode: no
-    changed_when: "'No changes made.' not in result.stdout_lines"
 
 - name: Remove temp directory
   file:
