Call the script using a single task instead of two

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -8,4 +8,4 @@
   service:
     name: google-fluentd
     state: restarted
-  when: not ansible_check_mode
+  when: package_state == 'present' and not ansible_check_mode
