--- a/tasks/logging.yml
+++ b/tasks/logging.yml
@@ -25,7 +25,7 @@
   - name: Add repo and install agent or remove repo and uninstall agent
     command:
       chdir: "{{ tempfolder.path }}"
-      cmd: "bash add-logging-agent-repo.sh (( '--also-install' if package_state == 'present' else '--uninstall --remove-repo' }} --version={{ version }} {{ '--dry-run' if ansible_check_mode else '' }}"
+      cmd: "bash add-logging-agent-repo.sh {{ '--also-install' if package_state == 'present' else '--uninstall --remove-repo' }} --version={{ version }} {{ '--dry-run' if ansible_check_mode else '' }}"
     environment:
       REPO_CODENAME: "{{ ansible_distribution_release }}"
     register: result
