Uninstall via shell script rather than using the package module, Add support for check mode (#42)
* Add uninstallation via script, change download directory from tmp to  usr/local/bin

* Change download dir to temp

* Add agent_type and package_state to the role variables section of the readme

* added --remove_repo flag

* change scriptlocation to tempdir

* change logging to monitoring

* fix indentation and changed_when: false to script download

* Reformat README

* restart monitoring agent after adding plugins

* Add README details for version options

* Reformat README

* Add links to configuring the logging and cloud-ops agents

* Add period

* minor edits to README

* Add --dry-run flag when in ansible check mode, run dir creation, script download, script execution and dir removal even in check mode

* fix dry-run conditional

* Dont run handler during check mode

* Consolidate script calls into a single task

* use main_config_file as a truthy value directly

* Add warning that repo is a WIP

* Add warning that repo is a WIP

* Add warning that repo is a WIP

* Add warning that repo is a WIP

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: restart monitoring agent
   service:
-    name: "{{ monitoring_service_name }}"
+    name: stackdriver-agent
     state: restarted
+  when: package_state == 'present' and not ansible_check_mode
