Add logging agent support (#41)
* Add logging agent support

* Add handler for logging agent

* Add path to logging binary

* Create single vars for main_config_file and additional_config_dir instead of having one for each agent

* hard-code logging binary, package name, and service name.

* Move vars from /default to /vars

* Clean up temp dir

* fix type and move custom configs under the package_state == present block

* Add uninstall via schell script

* Remove duplicated play

* add logging to list of acceptable agent types

* Add check mode support

* fix indentation

* Call the script using a single task instead of two

* ( -> {

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,10 @@
     name: stackdriver-agent
     state: restarted
   when: package_state == 'present' and not ansible_check_mode
+
+- name: restart logging agent
+  service:
+    name: google-fluentd
+    state: restarted
+  when: package_state == 'present' and not ansible_check_mode
+
