--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -11,3 +11,8 @@
     state: restarted
   when: package_state == 'present' and not ansible_check_mode
 
+- name: restart google-cloud-ops agent
+  service:
+    name: google-cloud-ops-agent
+    state: restarted
+  when: package_state == 'present' and not ansible_check_mode
