fix handlers file

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,13 @@
 ---
-- name: "restart {{ agent_type }} agent"
+- name: restart monitoring agent
   service:
-    name: "{{ vars[agent_type + '_service_name'] }}"
+    name: stackdriver-agent
+    state: restarted
+  when: package_state == 'present' and not ansible_check_mode
+
+- name: restart logging agent
+  service:
+    name: google-fluentd
     state: restarted
   when: package_state == 'present' and not ansible_check_mode
 
