--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ name: CI
   pull_request:
   push:
     branches:
-      - main
+      - master
 
 jobs:
 
@@ -30,6 +30,7 @@ jobs:
         distro:
           - geerlingguy/docker-centos7-ansible
           - geerlingguy/docker-centos8-ansible
+          # RedHat Universal Base Image (rhel8)
           - geerlingguy/docker-ubi8-ansible
           - geerlingguy/docker-amazonlinux2-ansible
           - geerlingguy/docker-debian9-ansible
@@ -37,6 +38,9 @@ jobs:
           - geerlingguy/docker-ubuntu1604-ansible
           - geerlingguy/docker-ubuntu1804-ansible
           - geerlingguy/docker-ubuntu2004-ansible
+          - xplenty/rhel7-pod-infrastructure
+          - geerlingguy/docker-ubi8-ansible
+
         exclude:
           - scenario: uninstall_agent
             version: 6.*.*
