--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         agent_type:
           - monitoring
-          - logging
+            #          - logging
             #          - ops-agent
         scenario:
           - install_agent
