--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,7 +18,7 @@
 
     - name: Set ops-agent agent_type to its fully qualified name
       set_fact:
-        agent_type: 'google-cloud-ops'
+        agent_type: google-cloud-ops
 
 - name: Create temp directory
   tempfile:
@@ -26,7 +26,7 @@
     state: directory
     suffix: cloud_ops_shell_scripts
   register: tempfolder
-  check_mode: no
+  check_mode: false
   changed_when: false
 
 - name: Download script
@@ -34,7 +34,7 @@
     url: "https://dl.google.com/cloudagents/add-{{ agent_type }}-agent-repo.sh"
     dest: "{{ tempfolder.path }}/add-{{ agent_type }}-agent-repo.sh"
     mode: 0755
-  check_mode: no
+  check_mode: false
   changed_when: false
 
 - name: Add repo and install agent or remove repo and uninstall agent
@@ -44,7 +44,7 @@
   environment:
     REPO_CODENAME: "{{ ansible_distribution_release }}"
   register: result
-  check_mode: no
+  check_mode: false
   changed_when: "'No changes made.' not in result.stdout_lines"
   notify: "restart {{ agent_type }} agent"
 
@@ -54,7 +54,7 @@
       copy:
         src: "{{ main_config_file }}"
         dest: "{{ vars[agent_type + '_config_path'] }}"
-        force: yes
+        force: true
         mode: 0644
         validate: "{{ vars[agent_type + '_validation_cmd'] }}"
       when: main_config_file
@@ -64,7 +64,7 @@
       copy:
         src: "{{ item }}"
         dest: "{{ vars[agent_type + '_plugins_path'] }}"
-        force: yes
+        force: true
         mode: 0644
         validate: "{{ vars[agent_type + '_validation_cmd'] }}"
       with_fileglob:
@@ -76,5 +76,5 @@
   file:
     path: "{{ tempfolder.path }}"
     state: absent
-  check_mode: no
+  check_mode: false
   changed_when: false
