--- a/vars/main.yml
+++ b/vars/main.yml
@@ -12,3 +12,6 @@ logging_validation_cmd: '/usr/sbin/google-fluentd -c %s --dry-run'
 ops-agent_service_name: google-cloud-ops-agent.target
 ops-agent_config_path: /etc/google-cloud-ops-agent/config.yaml
 ops-agent_validation_cmd: '/opt/google-cloud-ops-agent/subagents/collectd/sbin/collectd -tC %s'
+google-cloud-ops_service_name: google-cloud-ops-agent.target
+google-cloud-ops_config_path: /etc/google-cloud-ops-agent/config.yaml
+google-cloud-ops_validation_cmd: "/opt/google-cloud-ops-agent/subagents/collectd/sbin/collectd -tC %s"
