Use role instead of include_role when testing so seting the agent_type to google-cloud-ops has precendence

--- a/molecule/install_agent/prepare.yml
+++ b/molecule/install_agent/prepare.yml
@@ -7,26 +7,26 @@
       yum:
         name: python2
         state: present
-        update_cache: yes
-      when: ansible_os_family == "RedHat"
+        update_cache: true
+      when: ansible_os_family == 'RedHat'
 
     - name: Install curl
       apt:
         name: curl
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
 
     - name: Install apt-utils
       apt:
         name: apt-utils
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
 
     - name: Install gnupg
       apt:
         name: gnupg
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
