--- a/molecule/uninstall_agent/prepare.yml
+++ b/molecule/uninstall_agent/prepare.yml
@@ -2,38 +2,37 @@
 # Install dependencies needed in order to successfully run the shell script
 - name: Prepare
   hosts: all
-  tasks:
+  pre_tasks:
     - name: Install python2
       yum:
         name: python2
         state: present
-        update_cache: yes
-      when: ansible_os_family == "RedHat"
+        update_cache: true
+      when: ansible_os_family == 'RedHat'
 
     - name: Install curl
       apt:
         name: curl
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
 
     - name: Install apt-utils
       apt:
         name: apt-utils
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
 
     - name: Install gnupg
       apt:
         name: gnupg
         state: present
-        update_cache: yes
-      when: ansible_os_family == "Debian"
+        update_cache: true
+      when: ansible_os_family == 'Debian'
 
-    - name: Install agent
-      include_role:
-        name: stackdriver-ansible-role
+  roles:
+    - role: stackdriver-ansible-role
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
         package_state: present
