--- a/molecule/uninstall_agent/prepare.yml
+++ b/molecule/uninstall_agent/prepare.yml
@@ -1,64 +1,11 @@
 ---
-# Install dependencies needed in order to successfully run the shell script
-- name: Prepare
+- name: Converge
   hosts: all
   tasks:
-    - name: Install python2
-      yum:
-        name: python2
-        state: present
-<<<<<<< HEAD
-        update_cache: true
-      when: ansible_os_family == 'RedHat'
-=======
-        update_cache: yes
-      when: ansible_os_family == "RedHat"
->>>>>>> fe94545 (add tests and ci)
-
-    - name: Install curl
-      apt:
-        name: curl
-        state: present
-<<<<<<< HEAD
-        update_cache: true
-      when: ansible_os_family == 'Debian'
-=======
-        update_cache: yes
-      when: ansible_os_family == "Debian"
->>>>>>> fe94545 (add tests and ci)
-
-    - name: Install apt-utils
-      apt:
-        name: apt-utils
-        state: present
-<<<<<<< HEAD
-        update_cache: true
-      when: ansible_os_family == 'Debian'
-=======
-        update_cache: yes
-      when: ansible_os_family == "Debian"
->>>>>>> fe94545 (add tests and ci)
-
-    - name: Install gnupg
-      apt:
-        name: gnupg
-        state: present
-<<<<<<< HEAD
-        update_cache: true
-      when: ansible_os_family == 'Debian'
-
-    - name: Install agent
+    - name: Include google_cloud_ops_agents role
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
-=======
-        update_cache: yes
-      when: ansible_os_family == "Debian"
-
-    - name: Install agent
-      include_role:
-        name: stackdriver-ansible-role
->>>>>>> fe94545 (add tests and ci)
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-        package_state: present
+        package_state: absent
         testing: true
