Create test for additional configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,9 @@ jobs:
       - name: Create custom config file
         run: echo "# Sample custom config" > ~/custom_config.conf
 
+      - name: Create a additional config directory
+        run: mkdir ~/plugins; touch ~/plugins/custom_config.conf
+
       - name: Run Molecule tests.
         run: molecule test -s ${{ matrix.scenario }}
         env:
@@ -93,5 +96,6 @@ jobs:
           ANSIBLE_FORCE_COLOR: '1'
           MOLECULE_DISTRO: ${{ matrix.distro }}
           AGENT_TYPE: ${{ matrix.agent_type }}
-          CUSTOM_CONFIG_FILE: '~/custom_config.conf'
+          MAIN_CONFIG_FILE: '~/custom_config.conf'
+          ADDITIONAL_CONFIG_DIR: '~/plugins/'
           VERSION: ${{ matrix.include.version }}
