--- a/molecule/install_agent/converge.yml
+++ b/molecule/install_agent/converge.yml
@@ -1,12 +1,14 @@
 ---
 - name: Converge
   hosts: all
-  roles:
-    - role: stackdriver-ansible-role
+  tasks:
+    - name: Include google_cloud_ops_agents role
+      include_role:
+        name: google_cloud_ops_agents
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
         package_state: present
         version: "{{ lookup('env', 'VERSION') | default('latest', True) }}"
         main_config_file: "{{ lookup('env', 'MAIN_CONFIG_FILE') | default('', True) }}"
-        additional_config_dir: "{{ '' if agemt_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
+        additional_config_dir: "{{ '' if agent_type == 'ops-agent' else lookup('env', 'ADDITIONAL_CONFIG_DIR') | default('', True) }}"
         testing: true
