--- a/molecule/uninstall_agent/converge.yml
+++ b/molecule/uninstall_agent/converge.yml
@@ -1,8 +1,10 @@
 ---
 - name: Converge
   hosts: all
-  roles:
-    - role: stackdriver-ansible-role
+  tasks:
+    - name: Include google_cloud_ops_agents role
+      include_role:
+        name: google_cloud_ops_agents
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
         package_state: absent
