--- a/molecule/uninstall_agent/molecule.yml
+++ b/molecule/uninstall_agent/molecule.yml
@@ -6,7 +6,7 @@ driver:
 lint: |
   set -e
   yamllint .
-  ansible-lint . -w role-name
+  ansible-lint .
 platforms:
   - name: instance
     image: ${MOLECULE_DISTRO:-geerlingguy/docker-debian10-ansible}
