--- a/molecule/uninstall_agent/prepare.yml
+++ b/molecule/uninstall_agent/prepare.yml
@@ -2,7 +2,7 @@
 # Install dependencies needed in order to successfully run the shell script
 - name: Prepare
   hosts: all
-  pre_tasks:
+  tasks:
     - name: Install python2
       yum:
         name: python2
@@ -31,9 +31,10 @@
         update_cache: true
       when: ansible_os_family == 'Debian'
 
-  roles:
-    - role: stackdriver-ansible-role
-      vars:
-        agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
-        package_state: present
-        testing: true
+     - name: Install agent
+       include_role:
+         name: google_cloud_ops_agents
+       vars:
+         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
+         package_state: present
+         testing: True
