--- a/molecule/uninstall_agent/prepare.yml
+++ b/molecule/uninstall_agent/prepare.yml
@@ -33,7 +33,7 @@
 
     - name: Install agent
       include_role:
-        name: google_cloud_ops_agents
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         agent_type: "{{ lookup('env', 'AGENT_TYPE') | default('monitoring', True) }}"
         package_state: present
