--- a/meta/main.yml
+++ b/meta/main.yml
@@ -32,12 +32,13 @@ galaxy_info:
   galaxy_tags:
     - monitoring
     - logging
-    - ops-agent
+    - ops
+    - agent
     - google
-    - google-cloud
+    - cloud
     - collectd
     - fluentd
-    - fluent-bit
-    - open-telemetry
-    - agent
+    - fluentbit
+    - open
+    - telemetry
 dependencies: []
